--- a/src/presentation/index.html
+++ b/src/presentation/index.html
@@ -5,12 +5,36 @@
     <title>Reveal.js Presentation</title>
     <link rel="stylesheet" href="/reveal.js/dist/reveal.css" />
     <link rel="stylesheet" href="/reveal.js/dist/theme/black.css" />
+    <style>
+      #camera-container {
+        position: absolute;
+        bottom: 20px;
+        left: 20px;
+        width: 20vh; /* Viertel der Höhe → quadratisch */
+        height: 20vh;
+        box-shadow: 0 0 12px rgba(0, 0, 0, 0.5);
+        border-radius: 10px;
+        overflow: hidden;
+        z-index: 9999;
+      }
+
+      #camera-container iframe {
+        width: 100%;
+        height: 100%;
+        border: none;
+      }
+    </style>
   </head>
   <body>
+    <div id="camera-container">
+      <iframe src="https://vdo.ninja/?view=QGrzWB7&transparent&noaudio&quality=1" allow="camera; microphone; fullscreen" allowfullscreen></iframe>
+    </div>
     <div class="reveal">
       <div class="slides">
-        <section>
-          <section>Slide 1.1</section>
+        <section data-background-color="aquamarine">
+          <section>
+            <div>Slide 1.1</div>
+          </section>
           <section>Slide 1.2</section>
         </section>
         <section>Slide 2</section>
@@ -31,9 +55,11 @@
       Reveal.initialize({
         keyboard: false,
         touch: false,
-        controls: false,
+        controls: true,
         progress: false,
         overview: false,
+        transition: "none",
+        disableLayout: true,
       })
 
       const socket = io()
